@@ -1,8 +1,10 @@
 package com.restful_spring.rest_interceptor;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
+import org.springframework.web.servlet.config.annotation.InterceptorRegistration;
+import org.springframework.web.servlet.config.annotation.InterceptorRegistry;
 
 /**
  * Assists with the creation of a {@link RestInterceptor}.
@@ -13,27 +15,33 @@ import java.util.List;
 public class RestInterceptorRegistration {
 
     private final RestInterceptor restInterceptor;
-    private int order = 0;
+    private final InterceptorRegistration registration;
 
     /**
      * Creates a new instance of {@link RestInterceptorRegistration}.
      */
-    public RestInterceptorRegistration(RestInterceptor restInterceptor) {
+    RestInterceptorRegistration(RestInterceptor restInterceptor, InterceptorRegistry registry) {
         this.restInterceptor = restInterceptor;
+        this.registration = registry.addInterceptor(restInterceptor);
     }
 
     /**
      * Add RestfulPatterns the interceptor should be included in.
      */
     public RestInterceptorRegistration addRestfulPatterns(RestfulPattern... restfulPatterns) {
-        return addRestfulPatterns(List.of(restfulPatterns));
+        return addRestfulPatterns(Arrays.asList(restfulPatterns));
     }
 
     /**
-     * List-based variant of {@link #addRestfulPatterns(RestfulPattern...)}.
+     * Collection-based variant of {@link #addRestfulPatterns(RestfulPattern...)}.
+     * <p> Call InterceptorRegistration's addPathPatterns method with the paths of the RestfulPatterns.
      */
     public RestInterceptorRegistration addRestfulPatterns(Collection<RestfulPattern> restfulPatterns) {
         restInterceptor.restfulPatterns = new ArrayList<>(restfulPatterns);
+        registration.addPathPatterns(restfulPatterns.stream()
+                .map(RestfulPattern::getPath)
+                .toList()
+        );
         return this;
     }
 
@@ -41,15 +49,7 @@ public class RestInterceptorRegistration {
      * Specify an order position to be used. Default is 0.
      */
     public RestInterceptorRegistration order(int order) {
-        this.order = order;
+        registration.order(order);
         return this;
-    }
-
-    protected RestInterceptor getRestInterceptor() {
-        return restInterceptor;
-    }
-
-    protected int getOrder() {
-        return order;
     }
 }
